Version 1.6.8
- BUG: Exporting via DnD from the repository browser could 
       create garbled paths if the urls of the files 
       required escaping. (Stefan)
- BUG: Properties loaded from a file were not changed or
       added without a manual edit of the loaded content. (Stefan)
- BUG: The /logmsg param wasn't used in the copy command. (Stefan)
- CHG: Various adjustments for Windows 7. (Stefan)
- CHG: The "show excluded folders as normal" setting is
       changed to false by default. (Stefan)

Version 1.6.7
- BUG: The status cache could segfault in some situations. (Stefan)
- BUG: Memory leak in SubWCRevCOM. (Stefan)
- BUG: The copy-from url in the Check-for-modifications Dialog
       was wrong for single files. (Stefan)
- BUG: SubWCRevCOM could only be used by one single application
       at a time. (Stefan)
- BUG: The column order wasn't saved correctly in the status
       list control. (Stefan)
- BUG: The message "only numbers are allowed" could be shown even
       when the bugtraq:number property was set to false. (Stefan)
- BUG: The "diff with previous revision" in the log dialog could
       use the wrong revision if there was a path with a copyfrom
       revision. (Stefan)
- BUG: Deadlock in the shell extension when used from a multi-threaded
       application. (Jonathan Potter, GP Software and Stefan)
- BUG: The "commonURL" parameter in the CheckCommit() method of the
       IBugtraqProvider2 interface was sometimes wrong. (Stefan)
- BUG: Revision graph won't show w/c revision under certain 
       conditions. (Stefan Fuhrmann)
- BUG: Revision graph would segfault for small repositories
       (Stefan Fuhrmann)
- BUG: Errors returned in a post-commit hook script were ignored
       in a branch/tag/copy operation. (Stefan)
- BUG: Text files dragged from the repository browser to the explorer
       got truncated if they had the svn:eol-style property set. (Stefan)
- BUG: Resizing the dialogs with right/middle click didn't respect